fix patterns